Update build job

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,6 +92,11 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('release.keystore')
+            keyAlias 'purrse-release-key'
+            storePassword 'RELEASE_KEYSTORE_PASSWORD'
+        }
     }
     buildTypes {
         debug {
@@ -101,6 +106,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
+            minifyEnabled true // Enable code shrinking (optional but recommended for release)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
