--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build-android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/build/outputs/bundle/release/app-release.js --sourcemap-output android/app/build/outputs/bundle/release/app-release.js.map",
+    "android-release-bundle": "npm run build-android && cd android && gradlew app:bundleRelease",
+    "android-release": "npm run build-android && cd android && gradlew app:assembleRelease"
   },
   "dependencies": {
     "react": "19.0.0",
